--- a/css/base.css
+++ b/css/base.css
@@ -196,6 +196,10 @@ iframe {
 	flex-direction: column;
 }
 
+.border-top {
+display: none;
+}
+
 .column {
 	margin-left: 5px;
 }
@@ -208,7 +212,7 @@ iframe {
 	font-size: 0.85rem;
 	line-height: 0;
 	color: var(--color-description-full);
-	margin-top: 10px;
+	margin-top: 3vh;
 }
 
 /* Page Loader */
@@ -237,6 +241,12 @@ iframe {
 	opacity: 0.4;
 	background: var(--color-link);
 	animation: loaderAnim 0.7s linear infinite alternate forwards;
+}
+
+#b728x90,
+#b160x600,
+#b300x600 {
+	display: none;
 }
 
 @keyframes loaderAnim {
@@ -307,7 +317,7 @@ main {
 }
 
 .grid--outer {
-	padding: 1.5rem;
+	padding: 50px 8vw 50px 8vw;
 }
 
 .codrops-header {
@@ -408,9 +418,6 @@ main {
 }
 
 .fullview__item-titlewrap {
-	margin-top: 5rem;
-	/* position: fixed; */
-	padding: 1.5rem;
 	background: #fff;
 }
 
@@ -419,6 +426,7 @@ main {
 	color: var(--color-title-full);
 	font-weight: normal;
 	font-size: 1rem;
+	z-index: 10;
 }
 
 .fullview__item-number {
@@ -459,39 +467,35 @@ main {
 }
 
 .showcase-container {
-	margin-top: 5rem;
 	display: flex;
 	flex-direction: column;
-	width: 90vw;
 	z-index: 1;
-	margin-left: 8vw;
+	width: 100vw;
+	padding: 40px 8vw;
+	border-top: 1px solid var(--color-lines);
 }
 
 .player-container {
     width: 100%;
     height: 100%;
-    max-width: 1034px;
-    max-height: 543px;
-    margin: 0 auto;
+	max-width: 94vw;
+	z-index: 99;
 }
 
-.player-container div {
+.player-container-inner {
 	position: relative;
     padding-top: 25px;
-    padding-bottom: 67.5%;
-    height: 0;
+	height: 0;
+	padding-bottom: 97.5%;
 }
 
 .player {
     box-sizing: border-box;
-    background: url(../img/Laptop-frame.png) center center no-repeat;
-    background-size: contain;
-    padding: 11.9% 15.5% 14.8%;
+    background: none;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+	width: 84vw;
 }
 
 .player-frame {
@@ -542,8 +546,21 @@ main {
 }
 
 .first-view {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
+}
+
+.preview-container {
+	max-width: 84vw;
+}
+
+.preview {
+	max-width: 84vw;
+	margin: 2vh 0 0 0;
+}
+
+.fullview__item-h3 {
+	margin-top: 8vh;
 }
 
 @media screen and (min-width: 55em) {
@@ -791,13 +808,13 @@ main {
 		grid-area: 2 / 5 / 2 / 6;
 	}
 	.grid__toggle {
-		background: var(--color-toggle-bg);
-		color: var(--color-toggle);
-		border: 0;
+		background: #ffffff;
+		color: var(--color-emphasis);
+		border: 1px dotted var(--color-emphasis);
 		margin: 0;
 		padding: 0;
 		cursor: pointer;
-		height: calc(12vw + 30px);
+		height: calc(8vw + 30px);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -808,6 +825,9 @@ main {
 		pointer-events: auto;
 	}
 	.grid__toggle:focus {
+		background: var(--color-emphasis);
+		color: #ffffff;
+		border: 1px solid var(--color-emphasis);
 		outline: none;
 	}
 	.grid__toggle-inner {
@@ -938,10 +958,17 @@ main {
 	.fullview__item-titlewrap {
 		align-self: end;
 		margin-top: 30px;
-		/* text-align: right; */
 		background: none;
-		padding: 0;
+		padding: 1.5rem;
 	}
+
+	.fullview__item-h3 {
+		align-self: end;
+		margin-top: 50px;
+		background: none;
+		padding: 0 1.5rem;
+	}
+
 	.fullview__item-title {
 		color: var(--color-emphasis);
 		font-size: 2.25rem;
@@ -967,6 +994,94 @@ main {
 	
 	.first-view {
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 	}
+
+	.wrap {
+		flex-wrap: wrap;
+	}
+
+	.banner {
+		margin-right: 1vw;
+	}
+
+	.showcase-container {
+		margin-top: 5rem;
+		display: flex;
+		flex-direction: column;
+		width: 90vw;
+		z-index: 1;
+		padding: 0 8vw;
+		border: none;
+	}
+
+	#b728x90,
+	#b160x600,
+	#b300x600 {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.player {
+		box-sizing: border-box;
+		background: url(../img/Laptop-frame6.png) center center no-repeat;
+		background-size: contain;
+		padding: 9.5% 13% 15% 13%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	.player-container {
+		width: 100%;
+		height: 100%;
+		max-width: 84vw;
+		margin: 0 auto;
+	}
+	
+	.player-container-inner {
+		position: relative;
+		padding-top: 25px;
+		padding-bottom: 67%;
+		height: 0;
+		margin-top: -20px;
+	}
+
+	.border-top {
+		border-top: 1px solid var(--color-lines);
+		margin-left: -10vw;
+		margin-right: -15vw;
+		z-index: -10;
+		margin-bottom: 30px;
+		display: inline-block;
+	}
+
+	.preview-container {
+		max-width: 84vw;
+	}
+
+	.preview {
+		max-width: 84vw;
+		margin: 5vh 0 0 0;
+	}
+
+	.centered {
+		display: flex;
+		padding: 0 2vw;
+		margin: 5vh 0 10vh 0;
+	}
+
+	.img-full-width {
+		width: 100vw;
+		z-index: -10;
+	}
+	
+	.img-full-width-container {
+		width: 100vw;
+		margin-left: -11vw;
+		z-index: -10;
+	}
+
 }
