--- a/css/base.css
+++ b/css/base.css
@@ -27,6 +27,8 @@ body {
 	color: var(--color-text);
 	background-color: #fff;
 	background-color: var(--color-bg);
+	--easeTime: 0.8s;
+	--transition: all 0.8s ease;
 }
 
 #nav {
@@ -380,7 +382,7 @@ main {
 }
 
 .profession {
-	font-size: 1.25rem;
+	font-size: 1rem;
 	margin: 0 0 25px 0;
 	display: block;
 }
@@ -507,7 +509,7 @@ main {
 }
 
 .my-pic {
-	height: 50vh;
+	height: 100vh;
 	margin-top: 0;
 }
 
@@ -563,6 +565,10 @@ main {
 	margin-top: 8vh;
 }
 
+.img-full-width {
+display: none;
+}
+
 @media screen and (min-width: 55em) {
 	.js main {
 		/* height: 100vh; */
@@ -608,6 +614,11 @@ main {
 		display: flex;
 		justify-content: flex-end;
 		margin-top: 0;
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		background-size: cover;
+		z-index: -100;
 	}
 
 	.menu-item {
@@ -670,8 +681,9 @@ main {
 		padding: 1rem;
 	}
 	.title {
-		font-size: 2.75vw;
+		font-size: 2.46rem;
 	}
+	
 	.side {
 		display: flex;
 	}
@@ -1095,4 +1107,13 @@ main {
 		height: 100%;
 	}
 
+	.profession {
+		font-size: 1.25rem;
+		margin: 0 0 25px 0;
+		display: block;
+	}
+
+	.site-demo {
+		box-shadow: 0 7px 21px 0 rgba(0,0,0,.1);
+	}
 }
