--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,su
 	box-sizing: border-box;
 }
 
+html,
 body {
 	/* --color-emphasis: #fbc92d; */
 	--color-emphasis: #fe0048;
@@ -29,6 +30,14 @@ body {
 	background-color: var(--color-bg);
 	--easeTime: 0.8s;
 	--transition: all 0.8s ease;
+}
+
+.fullview__item-titlewrap,
+.showcase-container,
+.first-view,
+.fullview__item div {
+	max-width: 100vw;
+	overflow: hidden;
 }
 
 #nav {
@@ -201,6 +210,12 @@ iframe {
 
 .border-top {
 display: none;
+}
+
+.footer-border-top {
+	display: inline-block;
+	height: 1px;
+	background-color: var(--color-lines);
 }
 
 .column {
@@ -426,6 +441,21 @@ main {
 	z-index: 10;
 }
 
+.fullview__title-mobile {
+	margin: 0;
+	color: var(--color-title-full);
+    font-weight: normal;
+    font-size: 1rem;
+    z-index: 99;
+    line-height: 1;
+    bottom: 0;
+    top: auto;
+    left: 0;
+    -webkit-writing-mode: vertical-rl;
+    writing-mode: vertical-rl;
+    transform: scale(-1);
+}
+
 .fullview__item-number {
 	font-size: 1.5rem;
 	padding: 3vw 1.5vw 0 1.5vw;
@@ -531,7 +561,7 @@ main {
 	-moz-transition: none;
 	pointer-events: auto;
 	padding: 20px;
-    margin: 20px 0 0 0;
+    margin: 20px 0 30px 0;
     display: flex;
     justify-content: center;
 }
@@ -562,7 +592,7 @@ main {
 }
 
 .img-full-width {
-display: none;
+	display: none;
 }
 
 .my_pic-container {
@@ -639,6 +669,82 @@ display: none;
 .langs {
 	display: flex;
 	flex-direction: column;
+}
+
+.fullview {
+	overflow-x: hidden;
+}
+
+.fullview__item-number {
+	font-size: 1.3rem;
+	align-self: start;
+	background: none;
+	padding: 0;
+	margin: 0 0 10px 0;
+}
+
+.fullview__item-number::before {
+	content: '―';
+	margin-right: 0.5rem;
+}
+
+.flex-wrap {
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+.site-demo {
+	width: 84vw;
+	/* box-shadow: 0 0 21px 0 rgba(0,0,0,.1); */
+	align-self: center;
+}
+
+.mobile-demo-1 {
+	align-self: flex-start;
+	margin-left: 0;
+	width: 90vw;
+}
+	
+.mobile-demo {
+	align-self: flex-start;
+	margin-left: 0;
+	width: 110vw;
+}
+
+.mobile-demo-container {
+	display: flex;
+	justify-content: center;
+	margin-top: -20px;
+	margin-bottom: -20px;
+}
+
+.gallery-item {
+	width: 84vw;
+}
+
+.mobile-footer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.footer-p p {
+	color: var(--color-title-full);
+	font-weight: normal;
+	font-size: 1rem;
+}
+
+.footer-p {
+	display: flex;
+	justify-content: center;
+}
+
+.pic-as-bg {
+	background-image: url(img/Elena-pic-3.jpg);
+    background-repeat: no-repeat;
+    background-size: 140vw;
+	background-position: 100% 100%;
+	padding-bottom: 20px;
 }
 
 @media screen and (min-width: 55em) {
@@ -761,7 +867,8 @@ display: none;
 	.codrops-header {
 		padding: 1vw;
 	}
-	.title {
+	.title,
+	.fullview__item-title {
 		font-size: 2.46vw;
 	}
 	
@@ -1012,7 +1119,7 @@ display: none;
 	.fullview__details {
 		color: var(--color-emphasis);
 		margin-bottom: 5px;
-		font-size: 0.85vw;
+		font-size: 1.2vw;
 		font-weight: bold;
 		display: block;
 		text-transform: uppercase;
@@ -1022,13 +1129,12 @@ display: none;
 		left: 0;
 	}
 
-	.fullview__year-list {
+	.fullview__year-list li {
 		list-style-type: none;
 		padding-left: 0;
-		margin-top: 0;
+		margin-top: 0.7vw;
 		max-width: 360px;
-		font-size: 0.85vw;
-		line-height: 1vw;
+		font-size: 1.2vw;
 	}
 	.fullview__year-list ul {
 		list-style-type: none;
@@ -1052,13 +1158,15 @@ display: none;
 		margin: 0;
 	}
 	.fullview__item-number {
+		font-size: 2vw;
 		align-self: start;
 		background: none;
 		padding: 0;
+		margin: 30px 0 0 -10px;
 	}
 	.fullview__item-titlewrap {
 		align-self: end;
-		margin-top: 30px;
+		margin-top: 1vh;
 		background: none;
 		padding: 1.5vw;
 	}
@@ -1070,16 +1178,20 @@ display: none;
 		padding: 0 1.5vw;
 	}
 
-	.fullview__item-title {
-		color: var(--color-emphasis);
-		font-size: 2.25vw;
-		font-weight: bold;
-	}
-	.fullview__item-description {
+	.fullview__item-description,
+	.profession {
+		font-size: 1.25vw;
 		max-width: 360px;
-		line-height: 1vw;
+		line-height: 1.8vw;
 		margin-top: 2px;
 	}
+
+	.subtitle,
+	.year {
+		font-size: 1.2vw;
+		color: var(--color-description-full);
+	}
+
 	.fullview,
 	.fullview__item {
 		opacity: 0;
@@ -1110,7 +1222,7 @@ display: none;
 		margin-top: 5vw;
 		display: flex;
 		flex-direction: column;
-		width: 90vw;
+		/* width: 90vw; */
 		z-index: 1;
 		padding: 0 8vw;
 		border: none;
@@ -1152,6 +1264,7 @@ display: none;
 
 	.border-top {
 		border-top: 1px solid var(--color-lines);
+		height: 1px;
 		margin-left: -10vw;
 		margin-right: -15vw;
 		z-index: -10;
@@ -1161,6 +1274,9 @@ display: none;
 
 	.preview-container {
 		max-width: 84vw;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 
 	.preview {
@@ -1177,12 +1293,14 @@ display: none;
 	.img-full-width {
 		width: 100vw;
 		z-index: -10;
+		display: block;
 	}
 	
 	.img-full-width-container {
 		width: 100vw;
 		margin-left: -11vw;
 		z-index: -10;
+		overflow: visible;
 	}
 
 	.flex-wrap {
@@ -1196,14 +1314,10 @@ display: none;
 		height: 100%;
 	}
 
-	.profession {
-		font-size: 1.25vw;
-		margin: 0 0 25px 0;
-		display: block;
-	}
-
 	.site-demo {
-		box-shadow: 0 7px 21px 0 rgba(0,0,0,.1);
+		/* box-shadow: 0 0 21px 0 rgba(0,0,0,.1); */
+		max-width: 60vw;
+		align-self: center;
 	}
 
 	.dash {
@@ -1213,6 +1327,65 @@ display: none;
 	.langs {
 		display: flex;
 		flex-direction: row;
+	}
+
+	.fullview__item-titlewrap,
+	.showcase-container,
+	.first-view,
+	.fullview__item div {
+	max-width: 100vw;
+	overflow: visible;
+	}
+
+	.fullview__item-number::before {
+		content: '―';
+		margin-right: 0.5rem;
+	}
+
+	.background-img {
+		background: url("img/DN-header.jpg") no-repeat center;
+		background-size: 100vw;
+		overflow-x: scroll;
+	}
+
+	.mobile-demo-1 {
+		width: 30vw;
+		align-self: flex-start;
+		margin-left: 5vw;
+		margin-top: 5vh;
+	}
+	
+	.mobile-demo {
+		width: 30vw;
+		align-self: flex-start;
+		margin-left: 20vw;
+	}
+
+	.mobile-demo-container {
+		display: flex;
+		justify-content: center;
+		margin-top: 5vh;
+	}
+
+	.mobile-footer {
+		display: none;
+	}
+
+	#paris-nuits {
+		height: 90vh;
+	}
+
+	.fullview__title-mobile {
+		display: none;
+	}
+
+	.pic-as-bg {
+		background-image: none;
+		min-height: 100vh;
+		background-repeat: no-repeat;
+		background-size: 100vw;
+		background-origin: 20px;
+		background-position: 0% 0%;
 	}
 
 }
