--- a/css/base.css
+++ b/css/base.css
@@ -599,11 +599,13 @@ main {
 .my_pic-container {
 	background-size: contain;
     background-repeat: no-repeat;
-	background-position-y: bottom;
-	background-position-x: right;
+    background-position-y: bottom;
+    background-position-x: right;
     margin-left: -90px;
-    margin-top: -130px;
-    height: 45vh;
+    margin-top: -283px;
+	height: 56vh;
+	z-index: 0;
+    margin-left: 0;
 }
 
 .cv-container {
@@ -854,16 +856,15 @@ main {
 	.my_pic-container {
 		display: flex;
 		justify-content: flex-end;
-		margin-top: 0;
-		width: 100%;
-		height: 100%;
-		position: absolute;
+		margin-top: 95px;
+		width: 35vw;
+		height: 81vh;
 		background-size: cover;
-		z-index: -100;
 		background-repeat: no-repeat;
 		background-position-y: top;
 		background-position-x: right;
-		margin-left: 0;
+		z-index: 0;
+		margin-left: 53vw;
 	}
 
 	.menu-item {
