--- a/css/base.css
+++ b/css/base.css
@@ -83,10 +83,6 @@ body {
 	  display: block;
 	  text-decoration: none;
 	}
-	
-  .header .menu-btn:hover {
-	  background-color: #f4f4f4;
-	}
   
   .menu-item {
 	  overflow: hidden;
@@ -268,6 +264,136 @@ display: none;
 	display: none;
 }
 
+.demo-grid {
+	--body-text: var(--color-text);
+	--body-text-alt: var(--color-emphasis);
+	--body-bg: #ffffff;
+	--link-text: var(--color-text);
+	--link-text-hover: var(--color-emphasis);
+	--content-font: 'Montserrat', sans-serif;
+}
+
+.content {
+	height: 100vh;
+	overflow: hidden;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	--pieces-height: 50vh;
+	/* padding-bottom: 60vh; */
+	/* height: var(--pieces-height); */
+	/* margin-bottom: 8em; */
+}
+
+.page-nav {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	display: flex;
+	flex-direction: column;
+	/* align-items: center; */
+	padding: 0 8vw;
+	justify-content: center;
+	align-items: flex-end;
+	opacity: 0;
+	font-family: var(--content-font);
+}
+
+.page-nav a {
+	font-size: 1.5rem;
+}
+
+.info--open {
+	opacity: 1;
+	transform: scale(1);
+	height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.page-nav__item {
+	font-size: 1vw;
+}
+
+.page-nav__item--close {
+	font-size: 1.85em;
+	margin: 1em 0 0 0;
+	color: var(--body-text-alt);
+	position: relative;
+}
+
+.page-nav__item--close:hover,
+.page-nav__item--close:focus {
+	color: var(--body-text-alt);
+	text-decoration: line-through;
+}
+
+.content__title {
+	background: transparent;
+	width: 84vw;
+	font-size: 1.2rem;
+	color: var(--color-emphasis);
+	border: 2px dotted var(--color-emphasis);
+	transition: all 0.3s;
+	cursor: pointer;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 400;
+	outline: none;
+	position: relative;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+	-webkit-transition: none;
+	-moz-transition: none;
+	pointer-events: auto;
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	padding: 25px;
+}
+
+.content__title:hover,
+.content__title:focus {
+	background: var(--color-emphasis);
+	color: #fff;
+	border: 2px solid var(--color-emphasis);
+	transition: all 0.3s;
+}
+
+.page-nav--open ~ .content__title {
+	pointer-events: none;
+}
+
+.info ~ .content__title {
+	pointer-events: none;
+	opacity: 1;
+}
+
+.content .pieces {
+	height: var(--pieces-height);
+	width: calc(var(--pieces-height) * calc(888/1000));
+	position: absolute;
+	align-self: flex-end;
+	left: 17%;
+    /* top: 30%; */
+	margin-left: calc(-1 * var(--pieces-height) * calc(888/1000) / 2);
+	margin-top: calc(100vh - var(--pieces-height));
+	pointer-events: none;
+	margin-left: 7vw;
+}
+
+.info-hidden {
+	opacity: 0;
+	transform: scale(0.8);
+	height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 @keyframes loaderAnim {
 	to {
 		opacity: 1;
@@ -286,6 +412,8 @@ a:focus,
 a:active {
 	color: var(--color-emphasis);
 	outline: none;
+	text-decoration: line-through;
+	transition: all 0.5s;
 }
 
 .hidden {
@@ -393,7 +521,7 @@ main {
 }
 
 .profession {
-	font-size: 1rem;
+	font-size: 0.9rem;
 	margin: 0 0 25px 0;
 	display: block;
 }
@@ -428,6 +556,14 @@ main {
 	color: var(--color-emphasis);
 	line-height: 1.85rem;
 	padding-bottom: 4px;
+}
+
+.fullview__item-title-body {
+	color: var(--color-text);
+	line-height: 1.85rem;
+	font-weight: bold;
+	font-size: 1.75rem;
+	margin: 24px 0px;
 }
 
 .fullview__item-titlewrap {
@@ -589,7 +725,7 @@ main {
 }
 
 .fullview__item-h3 {
-	margin-top: 8vh;
+	margin-top: 5vh;
 }
 
 .img-full-width {
@@ -807,6 +943,47 @@ main {
 	padding: 80px 0;
 }
 
+.projects-item-counter {
+	width: 40px;
+	font-size: .7rem;
+	height: 2rem;
+	border-bottom: 1px solid #e5e5e5;
+	vertical-align: top;
+	display: inline-block;
+	text-align: right;
+	padding: 1rem 0px 0px 0.2rem;
+	margin-right: 10px;
+	margin-top: 9px;
+}
+
+.fullview__item-h3 {
+	display: flex;
+}
+
+.menu-item-home {
+	margin: 4vw 0;
+	pointer-events: auto;
+	display: inline-block;
+	text-align: left;
+	z-index: 100;
+}
+
+.page-nav--open {
+	z-index: 100;
+}
+
+.content__title-container {
+	margin-top: 0;
+	align-self: flex-end;
+}
+
+.my_story-wrap p {
+	font-size: 1.9em;
+	line-height: 1.2em;
+	width: 50vw;
+    color: #000000;
+}
+
 @media screen and (min-width: 55em) {
 	.js main {
 		/* height: 100vh; */
@@ -870,7 +1047,14 @@ main {
 	.menu-item {
 		margin: 1.5vw 1.5vw 0 -20px;
 		pointer-events: auto;
-		justify-self: start;
+		display: inline-block;
+		text-align: left;
+		z-index: 1;
+	}
+	
+	.menu-item-home {
+		margin: 1vw 0 1vw 0;
+		pointer-events: auto;
 		display: inline-block;
 		text-align: left;
 		z-index: 1;
@@ -927,8 +1111,9 @@ main {
 		padding: 1vw;
 	}
 	.title,
-	.fullview__item-title {
-		font-size: 2.46vw;
+	.fullview__item-title,
+	.fullview__item-title-body {
+		font-size: 2.46rem;
 	}
 	
 	.side {
@@ -1086,7 +1271,7 @@ main {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		font-size: 1.15vw;
+		font-size: 1.15rem;
 		position: relative;
 		width: 100%;
 		pointer-events: auto;
@@ -1148,7 +1333,7 @@ main {
 		right: 0;
 		line-height: 1;
 		position: absolute;
-		font-size: 1.5vw;
+		font-size: 1.5rem;
 	}
 	.fullview {
 		position: absolute;
@@ -1178,7 +1363,7 @@ main {
 	.fullview__details {
 		color: var(--color-emphasis);
 		margin-bottom: 5px;
-		font-size: 1.2vw;
+		font-size: 1.2rem;
 		font-weight: bold;
 		display: block;
 		text-transform: uppercase;
@@ -1193,13 +1378,13 @@ main {
 		padding-left: 0;
 		margin-top: 0.7vw;
 		max-width: 360px;
-		font-size: 1.2vw;
+		font-size: 1.2rem;
 	}
 	.fullview__year-list ul {
 		list-style-type: none;
 	}
 	.fullview__year-list li {
-		line-height: 1.2vw;
+		line-height: 1.2rem;
 		list-style-type: none;
 	}
 	
@@ -1217,7 +1402,7 @@ main {
 		margin: 0;
 	}
 	.fullview__item-number {
-		font-size: 2vw;
+		font-size: 2rem;
 		align-self: start;
 		background: none;
 		padding: 0;
@@ -1239,15 +1424,15 @@ main {
 
 	.fullview__item-description,
 	.profession {
-		font-size: 1.25vw;
+		font-size: 1.1rem;
 		max-width: 360px;
-		line-height: 1.8vw;
+		line-height: 1.8rem;
 		margin-top: 2px;
 	}
 
 	.subtitle,
 	.year {
-		font-size: 1.2vw;
+		font-size: 1.1rem;
 		color: var(--color-description-full);
 	}
 
@@ -1467,7 +1652,7 @@ main {
 	}
 
 	.credits {
-		font-size: 0.8vw;
+		font-size: 0.8rem;
 		max-width: 60vw;
 		margin-bottom: -2vh;
 	}
@@ -1506,4 +1691,74 @@ main {
 		margin-right: 20vw;
 		margin-left: 0;
 	}
+
+	.projects-item-counter {
+		height: 8vh;
+	}
+
+	.content {
+		--pieces-height: 90vh;
+		height: 100vh;
+		overflow: hidden;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.content__title {
+		padding: 20px 80px;
+		margin: 80vh 0 3vw 0;
+		background: transparent;
+		font-size: 1.3rem;
+		color: var(--color-emphasis);
+		border: 2px dotted var(--color-emphasis);
+		transition: all 0.3s;
+		cursor: pointer;
+		max-width: 24vw;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-weight: 400;
+		outline: none;
+		position: relative;
+		-webkit-transition: all 0.3s;
+		-moz-transition: all 0.3s;
+		transition: all 0.3s;
+		-webkit-transition: none;
+		-moz-transition: none;
+		pointer-events: auto;
+		display: flex;
+		justify-content: center;
+	}
+
+	.page-nav a {
+		font-size: 2rem;
+	}
+
+	.content .pieces {
+		left: 50%;
+		top: 50%;
+		height: var(--pieces-height);
+		width: calc(var(--pieces-height) * calc(888/1000));
+		position: absolute;
+		margin-left: calc(-1 * var(--pieces-height) * calc(888/1000) / 2);
+		margin-top: calc(-1 * var(--pieces-height) / 2);
+		pointer-events: none;
+		margin-left: 7vw;
+	}
+
+	.content__title-container {
+		margin-top: -72vh;
+		align-self: flex-start;
+	}
+
+	.my_story-wrap p {
+		font-size: 3.4em;
+		line-height: 1.1em;
+		width: 50vw;
+		color: #000000;
+		margin: 0;
+	}
+
 }
