--- a/css/base.css
+++ b/css/base.css
@@ -200,6 +200,10 @@ iframe {
 	display: inline-block;
 }
 
+.logo-container-home {
+	position: absolute;
+}
+
 .banner-container {
 	display: flex;
 	flex-direction: column;
