--- a/css/base.css
+++ b/css/base.css
@@ -32,6 +32,11 @@ body {
 	--transition: all 0.8s ease;
 }
 
+/* h1,
+h2 {
+	font-family: 'Oswald', sans-serif;
+} */
+
 .fullview__item-titlewrap,
 .showcase-container,
 .first-view,
@@ -333,7 +338,7 @@ display: none;
 	color: var(--body-text-alt);
 	text-decoration: line-through;
 }
-
+/* 
 .content__title {
 	background: transparent;
 	width: 84vw;
@@ -365,7 +370,7 @@ display: none;
 	color: #fff;
 	border: 2px solid var(--color-emphasis);
 	transition: all 0.3s;
-}
+} */
 
 .page-nav--open ~ .content__title {
 	pointer-events: none;
@@ -381,8 +386,8 @@ display: none;
 	width: calc(var(--pieces-height) * calc(888/1000));
 	position: absolute;
 	align-self: flex-end;
-	left: 17%;
-    /* top: 30%; */
+    left: 23%;
+    top: -20%;
 	margin-left: calc(-1 * var(--pieces-height) * calc(888/1000) / 2);
 	margin-top: calc(100vh - var(--pieces-height));
 	pointer-events: none;
@@ -495,7 +500,7 @@ main {
 
 .title-wrap {
 	padding: 0;
-	margin-top: 0;
+	margin-top: 5vh;
 }
 
 .side {
@@ -514,8 +519,9 @@ main {
 
 .title {
 	margin: 0;
-	font-size: 2rem;
-	line-height: 1.8rem;
+	font-size: 1.8rem;
+	font-weight: 600;
+	line-height: 2.2rem;
 	color: var(--color-emphasis);
 }
 
@@ -540,7 +546,6 @@ main {
 }
 
 .fullview__details {
-	text-transform: uppercase;
 	color: var(--color-emphasis);
 	font-size: 0.85rem;
 	margin-bottom: 0;
@@ -681,6 +686,7 @@ main {
 
 .my_story-wrap {
 	padding: 0;
+	margin-bottom: 30vh;
 }
 
 .btn {
@@ -991,9 +997,94 @@ main {
     color: #000000;
 }
 
-.space-25 {
-	height: 25px;
+.space-10 {
+	height: 10px;
 }
+
+/* Btn-2 */
+
+.button-holder-home {
+	height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+	justify-content: flex-end;
+	z-index: 100;
+}
+
+.btn-2 {
+	cursor: pointer;
+	background-color: #000;
+	width: 330px;
+	height: 64px;
+	line-height: 64px;
+	position: fixed;
+    top: 92%;
+	left: 35%;
+	transform: translate(-50%, -50%);
+	z-index: 0;	
+  }
+  .btn-2 span {
+	color: #fff;
+	display: block;
+	padding-left: 35px;
+	font-size: 0.9rem;
+	font-family: 'Montserrat', sans-serif;
+	transform-origin: center left;
+	transition: color 0.3s ease;
+	position: relative;
+	z-index: 1;
+  }
+  .btn-2 em {
+	position: absolute;
+	height: 1px;
+	background: #fff;
+	width: 47%;
+	right: 23px;
+	top: 50%;
+	transform: scaleX(0.25);
+	transform-origin: center right;
+	transition: all 0.3s ease;
+	z-index: 1;
+  }
+  .btn-2:before,
+  .btn-2:after {
+	content: "";
+	background: var(--color-emphasis);
+	height: 50%;
+	width: 0;
+	position: absolute;
+	transition: 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  }
+  .btn-2:before {
+	top: 0;
+	left: 0;
+	right: auto;
+  }
+  .btn-2:after {
+	bottom: 0;
+	right: 0;
+	left: auto;
+  }
+  .btn-2:hover:before {
+	width: 100%;
+	right: 0;
+	left: auto;
+  }
+  .btn-2:hover:after {
+	width: 100%;
+	left: 0;
+	right: auto;
+  }
+  .btn-2:hover span {
+	color: #fff;
+  }
+  .btn-2:hover em {
+	background: #fff;
+	transform: scaleX(1);
+  }
+  
 
 @media screen and (min-width: 55em) {
 	.js main {
@@ -1124,7 +1215,7 @@ main {
 	.title,
 	.fullview__item-title,
 	.fullview__item-title-body {
-		font-size: 2.46rem;
+		font-size: 1.6rem;
 	}
 	
 	.side {
@@ -1344,7 +1435,8 @@ main {
 		right: 0;
 		line-height: 1;
 		position: absolute;
-		font-size: 1.5rem;
+		font-size: 1rem;
+		color: var(--color-description-full);
 	}
 	.fullview {
 		position: absolute;
@@ -1374,7 +1466,7 @@ main {
 	.fullview__details {
 		color: var(--color-emphasis);
 		margin-bottom: 5px;
-		font-size: 1.2rem;
+		font-size: 0.9rem;
 		font-weight: bold;
 		display: block;
 		text-transform: uppercase;
@@ -1716,7 +1808,7 @@ main {
 		justify-content: center;
 	}
 
-	.content__title {
+	/* .content__title {
 		padding: 20px 80px;
 		margin: 80vh 0 3vw 0;
 		background: transparent;
@@ -1739,7 +1831,7 @@ main {
 		pointer-events: auto;
 		display: flex;
 		justify-content: center;
-	}
+	} */
 
 	.page-nav a {
 		font-size: 1.2rem;
