--- a/css/base.css
+++ b/css/base.css
@@ -201,7 +201,7 @@ iframe {
 }
 
 .logo-container {
-	padding: 13px;
+	padding: 8px 13px 7px 13px;
 	display: inline-block;
 }
 
@@ -1084,6 +1084,10 @@ main {
 	background: #fff;
 	transform: scaleX(1);
   }
+
+  .grid__toggle-text {
+	  font-size: 1rem;
+  }
   
 
 @media screen and (min-width: 55em) {
@@ -1310,7 +1314,7 @@ main {
 	.grid__item {
 		pointer-events: auto;
 		align-self: end;
-		transform: translate3d(0,30px,0);
+		transform: translate3d(0,23px,0);
 	}
 	.grid__item::after {
 		content: '';
@@ -1395,7 +1399,7 @@ main {
 	.grid__toggle-back {
 		opacity: 0;
 		position: absolute;
-		height: 50%;
+		height: 44%;
 		bottom: 0;
 		display: flex;
 		align-items: center;
