--- a/css/base.css
+++ b/css/base.css
@@ -1020,8 +1020,8 @@ main {
 	height: 64px;
 	line-height: 64px;
 	position: fixed;
-    top: 92%;
-	left: 35%;
+	top: 92%;
+	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 0;	
   }
@@ -1131,6 +1131,10 @@ main {
 		margin: 3vw 0;
 		display: flex;
 		justify-content: center;
+	}
+
+	.btn-2 {
+		left: 35%;
 	}
 
 	.btn a {
@@ -1818,10 +1822,6 @@ main {
 		margin-right: 20vw;
 		margin-left: 0;
 	}
-
-	/* .projects-item-counter {
-		height: 8vh;
-	} */
 
 	.content {
 		--pieces-height: 90vh;
